static files to show list from api
